--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -4955,6 +4955,20 @@
   keywords = {experiment,savings,ssm,visuomotor}
 }
 
+@article{Hunter_Contextsensitive_2021,
+  title = {Context-Sensitive Valuation and Learning},
+  author = {Hunter, Lindsay E and Daw, Nathaniel D},
+  year = {2021},
+  month = oct,
+  journal = {Current Opinion in Behavioral Sciences},
+  volume = {41},
+  pages = {122--127},
+  issn = {2352-1546},
+  doi = {10.1016/j.cobeha.2021.05.001},
+  abstract = {A variety of behavioral and neural phenomena suggest that organisms evaluate outcomes not on an absolute utility scale, but relative to some dynamic and context-sensitive reference or scale. Sometimes, as in foraging tasks, this results in sensible choices; in other situations, like choosing between options learned in different contexts, irrational choices can result. We argue that what unites and demystifies these various phenomena is that the brain's goal is not assessing utility as an end in itself, but rather comparing different options to choose the better one. In the presence of uncertainty, noise, or costly computation, adjusting options to the context can produce more accurate choices.},
+  language = {en}
+}
+
 @article{Huys_Bonsai_2012,
   title = {Bonsai {{Trees}} in {{Your Head}}: {{How}} the {{Pavlovian System Sculpts Goal}}-{{Directed Choices}} by {{Pruning Decision Trees}}},
   shorttitle = {Bonsai {{Trees}} in {{Your Head}}},
@@ -6911,6 +6925,22 @@
 }
 
 @article{Marko_Sensitivity_2012,
+  title = {Sensitivity to Prediction Error in Reach Adaptation},
+  author = {Marko, Mollie K. and Haith, Adrian M. and Harran, Michelle D. and Shadmehr, Reza},
+  year = {2012},
+  month = sep,
+  journal = {Journal of Neurophysiology},
+  volume = {108},
+  number = {6},
+  pages = {1752--1763},
+  publisher = {{American Physiological Society}},
+  issn = {0022-3077},
+  doi = {10.1152/jn.00177.2012},
+  abstract = {It has been proposed that the brain predicts the sensory consequences of a movement and compares it to the actual sensory feedback. When the two differ, an error signal is formed, driving adaptation. How does an error in one trial alter performance in the subsequent trial? Here we show that the sensitivity to error is not constant but declines as a function of error magnitude. That is, one learns relatively less from large errors compared with small errors. We performed an experiment in which humans made reaching movements and randomly experienced an error in both their visual and proprioceptive feedback. Proprioceptive errors were created with force fields, and visual errors were formed by perturbing the cursor trajectory to create a visual error that was smaller, the same size, or larger than the proprioceptive error. We measured single-trial adaptation and calculated sensitivity to error, i.e., the ratio of the trial-to-trial change in motor commands to error size. We found that for both sensory modalities sensitivity decreased with increasing error size. A reanalysis of a number of previously published psychophysical results also exhibited this feature. Finally, we asked how the brain might encode sensitivity to error. We reanalyzed previously published probabilities of cerebellar complex spikes (CSs) and found that this probability declined with increasing error size. From this we posit that a CS may be representative of the sensitivity to error, and not error itself, a hypothesis that may explain conflicting reports about CSs and their relationship to error.},
+  keywords = {cerebellum,motor learning,proprioception,vision}
+}
+
+@article{Marko_Sensitivity_2012a,
   title = {Sensitivity to Prediction Error in Reach Adaptation},
   author = {Marko, Mollie K. and Haith, Adrian M. and Harran, Michelle D. and Shadmehr, Reza},
   year = {2012},
@@ -8925,6 +8955,22 @@
   doi = {10.7717/peerj-cs.55},
   abstract = {Probabilistic programming allows for automatic Bayesian inference on user-defined probabilistic models. Recent advances in Markov chain Monte Carlo (MCMC) sampling allow inference on increasingly complex models. This class of MCMC, known as Hamiltonian Monte Carlo, requires gradient information which is often not readily available. PyMC3 is a new open source probabilistic programming framework written in Python that uses Theano to compute gradients via automatic differentiation as well as compile probabilistic programs on-the-fly to C for increased speed. Contrary to other probabilistic programming languages, PyMC3 allows model specification directly in Python code. The lack of a domain specific language allows for great flexibility and direct interaction with the model. This paper is a tutorial-style introduction to this software package.},
   language = {en}
+}
+
+@article{Sanders_Hippocampal_2020,
+  title = {Hippocampal Remapping as Hidden State Inference},
+  author = {Sanders, Honi and Wilson, Matthew A and Gershman, Samuel J},
+  editor = {Latham, Peter and Colgin, Laura L},
+  year = {2020},
+  month = jun,
+  journal = {eLife},
+  volume = {9},
+  pages = {e51140},
+  publisher = {{eLife Sciences Publications, Ltd}},
+  issn = {2050-084X},
+  doi = {10.7554/eLife.51140},
+  abstract = {Cells in the hippocampus tuned to spatial location (place cells) typically change their tuning when an animal changes context, a phenomenon known as remapping. A fundamental challenge to understanding remapping is the fact that what counts as a ``context change'' has never been precisely defined. Furthermore, different remapping phenomena have been classified on the basis of how much the tuning changes after different types and degrees of context change, but the relationship between these variables is not clear. We address these ambiguities by formalizing remapping in terms of hidden state inference. According to this view, remapping does not directly reflect objective, observable properties of the environment, but rather subjective beliefs about the hidden state of the environment. We show how the hidden state framework can resolve a number of puzzles about the nature of remapping.},
+  keywords = {bayesian inference,context,hidden state,hippocampus,learning,place cell}
 }
 
 @article{Sayali_Neural_2019,
