--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -49,19 +49,21 @@
 Humans are able to adapt motor commands to changing dynamics of the environment and of the body itself. While we must adapt to slow changes in our body dynamics, e.g. because of muscle exhaustion throughout the day, we can also adapt to sudden changes in the environment. For example, when picking up a heavy objects, we must adapt our motor commands to be able to move the object around. The size and material of an object provide us with contextual information which we can use to prepare the correct response to moving the object, and our ability to switch between clear contexts (e.g. between lifting a big rock and small piece of paper) has been well studied. However, contextual information is not always clear or realiable (e.g. a big object of unknown material). In this work, we focus on the behavioral phenomena effected by imperfect contextual information and present a hierarchical computational model for motor adaptation based on exact Bayesian inference, which explicitly takes into account contextual information and how the dynamics of context inference affect learning and action selection. We show how our model explains the effects of sensory cues and propriosceptive information on switching between tasks, the effects of environmental volatility and predictability on learning, and the effects of previously-learned adaptations on switching between tasks, in addition to the well studied savings, de-adaptation and spontaneous recovery.
 
 \section{Introduction}
-It has been long known that humans are capable of learning multiple novel motor tasks at the same time, even when these tasks oppose each other \citep[e.g.][]{Gandolfo_Motor_1996,Shadmehr_Functional_1997}, although interference can occur between tasks \citep[e.g.][]{Brashers-Krug_Consolidation_1996,Sing_Reduction_2010}.
+It has been long known that humans are capable of learning multiple novel motor tasks at the same time, even when these tasks oppose each other \citep[e.g.][]{Gandolfo_Motor_1996,Shadmehr_Functional_1997}, although interference can occur between tasks \citep[e.g.][]{Brashers-Krug_Consolidation_1996,Sing_Reduction_2010}. Additionally, humans have been shown to dynamically switch between different learned tasks. What prompts these switches is still a matter of research.
 
 In order to study motor adaptation, motor error is defined as the deviation between the observed movements of a participant and a baseline movement. For example, in experiments with a mechanical arm \citep[e.g.][]{Gandolfo_Motor_1996}, a correlation coefficient is defined between the movements when the mechanical arm exerts a force and the movements when it does not; the higher the correlation coefficient, the lower the error. Other examples include measuring the force profile in error-clamp trials \citep{Smith_Interacting_2006}, endpoint errors in visuomotor rotations \citep{Kim_Neural_2015} and saccade adaptation \citep{Catz_Cerebellardependent_2008}.
 
-By introducing blocks of trials in which a manipulation is present (e.g. the mechanical arm exerts a force), experimenters are able to observe the dynamics of adaptation through the lens of motor error. A number of phenomena have been observed that persist across participants and across many different motor adaptation experiments: savings, quick de-adaptation, anterograde interference and spontaneous recovery.
+By introducing blocks of trials in which a manipulation is present (e.g. a mechanical arm exerts a force), experimenters are able to observe the dynamics of adaptation through the lens of motor error. A number of phenomena have been observed that persist across participants and across many different motor adaptation experiments: savings, quick de-adaptation, anterograde interference and spontaneous recovery.
 
-In order to explain these phenomena, a number of computational models have been introduced. The least complex of these models are linear learners \citep[e.g.][]{Smith_Interacting_2006,Forano_Timescales_2020,Scheidt_Learning_2001}, in which a single one-dimensional variable is used to describe the adaptation of motor commands given the observed motor errors. By having multiple time scales, each with a learning rate and a forgetting rate, these models have been fitted to experimental data, explaining these distinct experimental phenomena.
+To explain these phenomena, a number of computational models have been introduced. The least complex of these models are linear learners \citep[e.g.][]{Smith_Interacting_2006,Forano_Timescales_2020,Scheidt_Learning_2001}, in which a single one-dimensional variable is used to describe the adaptation of motor commands given the observed motor errors. By having multiple time scales, each with a learning rate and a forgetting rate, these models have been fitted to experimental data, partially explaining these distinct experimental phenomena.
 
 Bayesian accounts of motor adaptation have also been previously presented, providing an alternative explanation for savings and quick de-adaptation in the form of switching between internal models of adaptation via predictions generated by these internal models \citep{Kording_Bayesian_2004,Oh_Minimizing_2019}. These models replace the idea of explicit multiple time scales with an estimation of their own uncertainty: as the model practices the same task, the uncertainty on its estimate of the underlying modification is reduced, which lowers variability in responses, as well as increases the stability of the estimate.
 
 While these general models of adaptation explain the most common phenomena observed in experiments, a number of known phenomena remain outside of their scope. For example, it is known that adaptation rate is reduced in situations where the environment is unstable and unpredictable \citep{Herzfeld_memory_2014}, or situations in which errors are small \citep{Marko_Sensitivity_2012} and slowly introduced \citep{Huang_Persistence_2009}. Learning new adaptations has also been found to depend on the history of adaptations learned \citep{Vaswani_Decay_2013}.
 
-In this work, we present a computational model for motor adaptation inspired by models such as MOSAIC \citep{Wolpert_Multiple_1998} and Bayesian switching models \citep{Kording_Bayesian_2004,Oh_Minimizing_2019}. We expand on these models by expanding the concept of context and introducing an explicit mechanism for inferring the context based on Bayesian inference. In our model, the context encompasses all the information relevant to making decisions, both environmental and internal to the agent making these decisions. To infer the current context, our model integrates several sources of information, including the predictions made by its internal forward models, an estimate of the reliability of these predictions, direct sensory information (such as visual contextual cues), proprioceptive information, and feedback provided by the environment. Having inferred the context, the model can choose the best-fitting internal model with which to make decisions.
+In this work, we show that these unexplained phenomena, alongside savings, de-adaptation, anterograde interference and spontaneous recovery, can be explained in terms of the concept of context, an idea that has recently been gaining traction in different fields \cite[e.g.][]{Sanders_Hippocampal_2020,Hunter_Contextsensitive_2021}.
+
+To this end, we present a computational model for motor adaptation inspired by models such as MOSAIC \citep{Wolpert_Multiple_1998} and Bayesian switching models \citep{Kording_Bayesian_2004,Oh_Minimizing_2019}. We expand on these models by expanding the concept of context and introducing an explicit mechanism for inferring the context based on Bayesian inference. In our model, the context encompasses all the information relevant to making decisions, both environmental and internal to the agent making these decisions. To infer the current context, our model integrates several sources of information, including the predictions made by its internal forward models, an estimate of the reliability of these predictions, direct sensory information (such as visual contextual cues), proprioceptive information, and feedback provided by the environment. Having inferred the context, the model can choose the best-fitting internal model with which to make decisions.
 
 We show that the dynamics of context inference provide a unifying explanation for all the experimental phenomena outlined above, providing a single account for motor adaptation under changing contexts, while relying on known mechanisms for adaptation.
 
@@ -72,7 +74,7 @@ We used our model to explain several experimental phenomena found in previous st
 
 Before presenting our simulations, we will briefly explain the fundamentals of the model we present. We leave the mathematical details of the implementation to the Methods section.
 
-\subsection{The model}
+\subsection{Modeling context-dependant adaptation}
 The model we present has three main components: (1) context-inference, (2) motor adaptation and (3) action selection. Each of these components informs the ones that follow: motor adaptation is informed by context inference, and action selection is informed directly by both motor adaptation and by context inference. A schematic representation of the model can be seen in \fref{fig:model}.
 
 \begin{figure}
@@ -228,9 +230,9 @@ In what follows, we dive deeper into the experimental literature to highlight th
 \subsection{Alternative explanations}
 For each of the representative studies presented in the Results section, the authors put forward explanations for the phenomena they observed in their data. While our model provides a single explanation for all these phenomena, it is not necessarily at odds with those presented by the respective authors and might instead act on top of the explanations the authors presented.
 
-\cite{Oh_Minimizing_2019} posited that the difference between their two groups (~\fref{fig:oh-2019}B and C) can be explained by considering that the smaller visual rotation of 10 degrees caused participants to update their baseline forward model instead of creating a new forward model for the context. If such an account were true, it would predict that when participants walk away from the experiment they would have trouble adapting to the no-rotation reality, having to re-learn it. Our model instead would suggest that participants would immediatly switch back to their baseline movements the moment they walk away from the computer screen, as that is a clear indication that the context has switched back to baseline. More generally, our model predicts that the observed difference between the two groups would disappear if clear sensory contextual cues were added to the experiment. While we believe our model provides a better explanation for the observations by \cite{Oh_Minimizing_2019}, the effect the authors describe has been documented before in chimpanzees \citep{Kojima_Memory_2004}; however, to our knowledge such an effect has not been observed in humans in tasks like that by \cite{Oh_Minimizing_2019}.
+\cite{Oh_Minimizing_2019} posited that the difference between their two groups (~\fref{fig:oh-2019}B and C) can be explained by considering that the smaller visual rotation of 10 degrees caused participants to update their baseline forward model instead of creating a new forward model for the context. If such an account were true, it would predict that when participants walk away from the experiment they would have trouble adapting to the no-rotation reality, having to re-learn it. Our model instead would suggest that participants would immediatly switch back to their baseline movements the moment they walk away from the computer screen, as that is a clear indication that the context has switched back to baseline. More generally, our model predicts that the observed difference between the two groups would disappear if clear sensory contextual cues were added to the experiment. While we believe our model provides a better explanation for the observations by \cite{Oh_Minimizing_2019}, the effect the authors describe has been documented before in chimpanzees \citep{Kojima_Memory_2004}\todo{@Stefan: you mentioned once you knew of papers talking about this. Do you have any citations I could add?}; however, to our knowledge such an effect has not been observed in humans in tasks like that by \cite{Oh_Minimizing_2019}.
 
-The paradigm by \cite{Herzfeld_memory_2014} was designed to test the hypothesis that a memory of errors affected the speed at which participants adapted to curl forces. While it has been shown that sensitivity to error can be modulated \cite{Marko_Sensitivity_2012}, and indeed in our model it depends on the amount of experience (see \sref{sec:interpreting-hyperparameters}, to our knowledge there are no other experiments suggesting that it depends on the history of errors. As before, the introduction of clear sensory contextual cues would allow us to gauge the importance of context inference and of previous errors in the observed data. The same can be said of the experiments by \cite{Davidson_Scaling_2004}, in which different contexts involve movement in different directions, which requires the use of different muscles. This alone could cause delays in switching unrelated to context inference [CITATION NEEDED on the delay in switching muscles?], but we expect the effects to be insufficient to explain the observed data.
+The paradigm by \cite{Herzfeld_memory_2014} was designed to test the hypothesis that a memory of errors affected the speed at which participants adapted to curl forces. While it has been shown that sensitivity to error can be modulated \cite{Marko_Sensitivity_2012}, and indeed in our model it depends on the amount of experience (see \sref{sec:interpreting-hyperparameters}), to our knowledge there are no other experiments suggesting that it depends on the history of errors. As before, the introduction of clear sensory contextual cues would allow us to gauge the importance of context inference and of previous errors in the observed data. The same can be said of the experiments by \cite{Davidson_Scaling_2004}, in which different contexts involve movement in different directions, which requires the use of different muscles. This alone could cause delays in switching unrelated to context inference\todo{Need citation for this}, but we expect the effects to be insufficient to explain the observed data.
 
 \subsection{Further experimental evidence}
 Context is often directly observable, either via environmental cues or via feedback observed after actions. In many behavioral experiments, for example, the context of the current block of trials is easily identifiable by the color of a cue light \citep[e.g.][]{Ethier_Spontaneous_2008}, the posture of the hand \citep[e.g.][]{Gandolfo_Motor_1996}, the target of the movement \citep[e.g.][]{Lee_Dual_2009} or by the workspace in which the task is being performed \citep[e.g.][]{Shadmehr_Adaptive_1994}. The context can also be selected by the agent itself. For example, a person can decide the level of care devoted to moving an egg or a lead ball around, which determines the way in which the person would move their hands. In these cases, the context is clearly determined and known to the agent and switches between different adaptations are immediate.
